--- a/css/main/graphics.css
+++ b/css/main/graphics.css
@@ -32,7 +32,7 @@ figure.right {
     margin-left: auto;
 }
 figure figcaption {
-    font-size: 0.9rem;
+    font-size: var(--size-400);
     margin-top: 5px;
     opacity: 0.8;
 }
