--- a/css/main/nav.css
+++ b/css/main/nav.css
@@ -11,7 +11,7 @@ nav.navigation a {
     right: 6px;
     padding: 8px 12px;
     color: var(--accent);
-    font-size: 13px;
+    font-size: var(--size-300);
     line-height: 1.35;
     border-radius: 3px;
 }
@@ -36,7 +36,7 @@ nav.navigation a.button {
         right: 6px;
         padding: 8px 8px;
         color: var(--accent);
-        font-size: 13px;
+        font-size: var(--size-300);
         line-height: 1.35;
         border-radius: 3px;
     }
